// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Countries - register as a component should show dialog 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
  >
    Configure countries
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          <th>
            Default
          </th>
          
          <th>
            Code
          </th>
          <th>
            Name
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        <tr
          class="data-row"
        >
          <td
            style="vertical-align: middle; text-align: center;"
          >
            
            
          </td>
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="name"
              readonly=""
              type="text"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        <tr
          class="data-row"
        >
          <td
            style="vertical-align: middle; text-align: center;"
          >
            
            
          </td>
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="name"
              readonly=""
              type="text"
            />
          </td>
          
          <td>
            <!--v-if-->
            <!--v-if-->
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost/erp/api/v0/countries?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  
</div>
`;

exports[`Countries - register as a component should show dialog with editable data 1`] = `
<div
  data-v-app=""
>
  
  <h1
    class="listtop"
  >
    Configure countries
  </h1>
  
  <div>
    <table
      class="dynatable"
    >
      <thead>
        <tr>
          <th>
            Default
          </th>
          
          <th>
            Code
          </th>
          <th>
            Name
          </th>
          
          <th />
        </tr>
      </thead>
      
      <tbody
        class="dynatableData"
      >
        
        <tr
          class="data-row"
        >
          <td
            style="vertical-align: middle; text-align: center;"
          >
            
            <input
              name="default"
              type="radio"
              value="ca"
            />
            <button
              name="change-default"
              style="display: none;"
            >
              
               Set 
              
            </button>
            
          </td>
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="name"
              readonly=""
              type="text"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        <tr
          class="data-row"
        >
          <td
            style="vertical-align: middle; text-align: center;"
          >
            
            <input
              name="default"
              type="radio"
              value="us"
            />
            <button
              name="change-default"
              style="display: none;"
            >
              
               Set 
              
            </button>
            
          </td>
          
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="code"
              readonly=""
              type="text"
            />
          </td>
          <td
            class="data-entry"
          >
            <input
              class="neutral input-box"
              name="name"
              readonly=""
              type="text"
            />
          </td>
          
          <td>
            
            <button
              name="modify"
            >
              
              Modify
              
            </button>
            <button
              disabled=""
              name="save"
            >
              
              Save
              
            </button>
            <button
              disabled=""
              name="cancel"
            >
              
              Cancel
              
            </button>
            <!--v-if-->
            
            <!--v-if-->
          </td>
        </tr>
        
      </tbody>
      <!--v-if-->
      
    </table>
  </div>
  <div>
    <span>
      Download: 
    </span>
    
    <span>
      <a
        href="http://localhost/erp/api/v0/countries?format=HTML"
        target="_blank"
      >
        [ HTML ]
      </a>
    </span>
    
  </div>
  
  
</div>
`;
